WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87473
[GTK] fix compilation for webkitwebview.cpp
https://bugs.webkit.org/show_bug.cgi?id=87473
Summary
[GTK] fix compilation for webkitwebview.cpp
Lu Guanqun
Reported
2012-05-25 01:32:05 PDT
[GTK] fix compilation for webkitwebview.cpp
Attachments
Patch
(1.98 KB, patch)
2012-05-25 01:35 PDT
,
Lu Guanqun
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Lu Guanqun
Comment 1
2012-05-25 01:35:04 PDT
Created
attachment 144004
[details]
Patch
Lu Guanqun
Comment 2
2012-05-25 01:36:33 PDT
fix the following warning: ../../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function ‘void webkit_web_view_realize(GtkWidget*)’: ../../../Source/WebKit/gtk/webkit/webkitwebview.cpp:971:27: warning: unused variable ‘priv’ [-Wunused-variable]
WebKit Review Bot
Comment 3
2012-05-25 06:04:32 PDT
Comment on
attachment 144004
[details]
Patch Clearing flags on attachment: 144004 Committed
r118517
: <
http://trac.webkit.org/changeset/118517
>
WebKit Review Bot
Comment 4
2012-05-25 06:04:37 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug