[GTK] fix compilation for webkitwebview.cpp https://bugs.webkit.org/show_bug.cgi?id=87473

Patch by Lu Guanqun <guanqun.lu@intel.com> on 2012-05-25
Reviewed by Martin Robinson.

When ACCELERATED_COMPOSITING and TEXTURE_MAPPER_GL is not set,
the local variable 'priv' won't be used. Therefore the following warning:

../../../Source/WebKit/gtk/webkit/webkitwebview.cpp: In function ‘void webkit_web_view_realize(GtkWidget*)’:
../../../Source/WebKit/gtk/webkit/webkitwebview.cpp:971:27: warning: unused variable ‘priv’ [-Wunused-variable]

* webkit/webkitwebview.cpp:
(webkit_web_view_realize):

Canonical link: https://commits.webkit.org/105269@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118517 268f45cc-cd09-0410-ab3c-d52691b4dbfc